force-app/main/default/objects/SalesOrder__c/SalesOrder__c.object-meta.xml
<CustomObject>
    <label>SalesOrder</label>
    <nameField>
        <label>SalesOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesOrders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>